<resources>
    <string name="app_name">ZAI Новости</string>
    <string name="main_nav">Главная</string>
    <string name="chat_nav">Чат</string>
    <string name="profile_nav">Профиль</string>
    <string name="exit">Выйти</string>
    <string name="versionAppName">ВЕРСИЯ ПРИЛОЖЕНИЯ</string>
    <string name="appNameProfile">Приложение</string>
    <string name="appThemeProfile">Внешний вид</string>
    <string name="settings">Настройки</string>
    <string name="notDisturbProfile">Не беспокоить</string>
    <string name="notification">Уведомления</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="useSystemTheme">Использовать системную тему</string>
    <string name="textAutoSystemTheme">Внешний вид приложения будет переключаться автоматически при изменение темы Android.</string>
    <string name="lightTheme">Светлая</string>
    <string name="darkTheme">Темная</string>
    <string name="theme">Тема</string>
    <string name="notificationApp">УВЕДОМЛЕНИЯ В ПРИЛОЖЕНИИ</string>
    <string name="enableNotification">Уведомления включены</string>
    <string name="disableNotification">Уведомления выключены</string>
    <string name="profileData">Личные данные</string>
    <string name="ready">Готово</string>
    <string name="imageNews">Изображение из новости</string>
    <string name="imageAvatar">Изображение аватара</string>
    <string name="imageRSS">Изображение RSS канала</string>
    <string name="pickPhoto">Выбрать фотографию</string>
    <string name="name">Имя</string>
    <string name="family">Фамилия</string>
    <string name="numberPhone">Номер телефона</string>
    <string name="codeTelegram">Проверочный код</string>
    <string name="passwordTelegram">Пароль от аккаунта</string>
    <string name="placeholderProfileView">Укажите имя и фамилию, если хотите, добавьте фотографию для Вашего профиля.</string>
    <string name="openGallery">Открыть галерею</string>
    <string name="takePhoto">Сделать фотографию</string>
    <string name="removeAvatar">Удалить аватар</string>
    <string name="imageFromGallery">Изображение из галереи</string>
    <string name="search">Поиск</string>
    <string name="swipe_to_cancel_recording">&#x25C0; Свайпните, чтобы отменить</string>

    <!--    List Chip RSS channel-->
    <string name="rss_channel_google">Google Новости</string>
    <string name="rss_channel_tass">ТАСС</string>
    <string name="rss_channel_bbc_world">BBC</string>
    <string name="rss_channel_new_yourk_times">New York Times</string>
    <string name="rss_channel_mailNews">Mail Новости</string>
    <string name="rss_channel_bankiNews">Банки РУ</string>
    <string name="rss_channel_astroBeneNews">AstroBene</string>
    <string name="searchLanguage">Поиск языков</string>
    <string name="selectLanguage">Выберите язык</string>
    <string name="message">Сообщение</string>
    <string name="not_support_message">Не поддерживаемое сообщение</string>
    <string name="remove_photo">Удалить фотографию</string>
    <string name="newsToday">Новости сегодня</string>
    <string name="ops">Упс!</string>
    <string name="notFoundLocalNews">Не найдено ваших сохраненных новостей</string>
    <string name="hintNotFoundLocalNews">Сохраните новость, чтобы вы могли иметь доступ к ее информации без использовании интернета, просто нажмите на кнопку, чтобы сохранить в этот раздел со значком</string>
    <string name="goToNews">Перейти к новостям</string>
    <string name="myNews">Мои новости</string>
    <string name="testTitle1">Российские банки избавляются от долларов и евро</string>
    <string name="testDescription1">Банки продолжают избавляться от долларов и евро на счетах …</string>
    <string name="testTitle2">Эксперты: Грипп имеет самый высокий пандемийный потенциал</string>
    <string name="testDescription2">В частности, 57% специалистов считают, что следующую глобальную вспышку …</string>
    <string name="testCount">2</string>
    <string name="apply">Подтвердите действие</string>
    <string name="removeAllLocalNews">Вы действительно хотите удалить все ваши сохраненные новости ?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="savedNews">Сохраненные новости</string>

    <string name="enter_url_rss">Введите URL адрес RSS канала</string>
</resources>