<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/WidgetTheme"
    android:background="?android:colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_width="250dp"
    tools:layout_height="250dp"
    android:paddingHorizontal="12dp"
    android:paddingVertical="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/myNews"
                app:srcCompat="@drawable/ic_saved"
                android:layout_height="wrap_content"
                android:tint="?colorPrimary"
                tools:ignore="UseAppTint" />

            <TextView
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?colorPrimary"
                android:text="@string/myNews"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testCount"
            android:paddingHorizontal="5dp"
            android:textAlignment="center"
            android:lineHeight="10sp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:background="@drawable/newyorknewsrss"
            android:src="@drawable/layer_list_circle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testTitle1"
                android:textSize="15sp"
                android:maxLines="2"
                android:textColor="?colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testDescription1"
                android:textSize="15sp"
                android:maxLines="2"
                android:textColor="#808080"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:background="@drawable/mailnewsbig"
            android:src="@drawable/layer_list_circle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testTitle2"
                android:textSize="15sp"
                android:maxLines="2"
                android:textColor="?colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testDescription2"
                android:textSize="15sp"
                android:maxLines="2"
                android:textColor="#808080"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>